--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,45 @@ header {
 }
 .fact-card span {
   font-size: 1.25rem;
-  font-weight: ;
+  font-weight: 500;
+}
+/* sponsors style */
+.sponsors-section {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  max-width: 1440px;
+  margin: auto;
+}
+.sponsors-section h2 {
+  font-size: 2.8rem;
+  font-weight: 800;
+  margin-bottom: 10px;
+}
+.sponsors-section p {
+  max-width: 540px;
+  color: rgba(114, 114, 114, 1);
+  margin: 20px auto 50px;
+}
+.sponsors-img {
+  display: grid;
+  justify-items: space-between;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 150px;
+}
+.sponsors-img {
+  filter: grayscale(100%);
+}
+/* footer style */
+.footer {
+  max-width: 1440px;
+  color: rgba(114, 114, 114, 1);
+  font-weight: 600;
+  background-color: rgba(255, 244, 231, 1);
+  margin: 130px auto 200px;
+  padding: 40px;
+  text-align: center;
+  border-radius: 10px;
 }
 /* responsive layout */
 @media only screen and (max-width: 600px) {
@@ -289,5 +327,11 @@ header {
   }
   .fact-card {
     margin: 10px;
+  }
+  /* sponsor style */
+  .sponsors-img {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    margin: auto;
   }
 }
